--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,8 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-#build/Release
+build/Release
+build/
 
 # Dependency directories
 node_modules/
@@ -128,7 +129,7 @@ dist
 
 # misc
 .DS_Store
-.env.local
+#.env.local
 .env.development.local
 .env.test.local
 .env.production.local
