--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --mode development --env development",
-    "start": "pm2-runtime start ecosystem.config.js --env production"
+    "build": "webpack --config webpack.config.js --watch",
+    "postinstall": "npm run build",
+    "start": "npx serve -s build"
   },
   "keywords": [
     "divulgacion",
