--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "dev": "webpack serve --mode development --env development",
     "build": "webpack --config webpack.config.js --watch",
-    "postinstall": "npm run build",
-    "start": "npx serve -s build"
+    "postinstall": "npm run start",
+    "start": "npx serve -s build -l 4000"
   },
   "keywords": [
     "divulgacion",
