--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --mode development --env development",
-    "start": "npx serve -s build -l 4000"
+    "s": "npx serve -s build -l 4000",
+    "start": "webpack serve --mode production --env production"
   },
   "keywords": [
     "divulgacion",
@@ -20,6 +21,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "date-and-time": "^0.14.1",
@@ -28,6 +30,7 @@
     "javascript-time-ago": "^2.3.3",
     "pm2": "^4.5.0",
     "react": "^17.0.1",
+    "react-bidirectional-infinite-scroll": "^2.0.1",
     "react-dom": "^17.0.1",
     "socket.io-client": "^3.0.3",
     "tailwindcss": "^1.9.6"
