--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "frotend de GetInformed-FCI",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --mode development --env development",
+    "start": "webpack serve --mode development --env development",
     "s": "npx serve -s build -l 4000",
-    "start": "webpack serve --mode production --env production"
+    "2": "webpack serve --mode production --env production"
   },
   "keywords": [
     "divulgacion",
