--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "frotend de GetInformed-FCI",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development --env development",
+    "dev": "webpack serve --mode development --env development",
     "s": "npx serve -s build -l 4000",
     "": "webpack serve --mode production --env production"
   },
