--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --mode development --env development",
-    "s": "npx serve -s build -l 4000",
+    "start": "npx serve -s build -l 4051",
     "": "webpack serve --mode production --env production"
   },
   "keywords": [
