--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "frontend-react",
+  "homepage":"https://github.com/geharpz/nuevo_informateFCI.git",
   "version": "0.0.1",
   "private": true,
   "description": "frotend de GetInformed-FCI",
   "main": "index.js",
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "dev": "webpack serve --mode development --env development",
     "start": "npx serve -s build -l 4051",
     "": "webpack serve --mode production --env production"
@@ -45,6 +48,7 @@
     "@types/socket.io-client": "^1.4.34",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^5.0.1",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.0",
     "node-sass": "^5.0.0",
